--- a/notebook/EDA_credit_card.ipynb
+++ b/notebook/EDA_credit_card.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "29cc6c57",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "id": "e60771f5",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "id": "26aff7c5",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "id": "49ace1d1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "id": "f7fde22a",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "b452b785",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "      dtype='object', name=0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "b3256e4e",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "id": "3036c87a",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "id": "da8cd39b",
    "metadata": {},
    "outputs": [],
@@ -440,13 +440,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "90c202c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "data=data.drop(columns=['default payment next month'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b3963a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -502,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "id": "adcae004",
    "metadata": {},
    "outputs": [
@@ -510,8 +518,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical columns:['LIMIT_BAL', 'AGE', 'PAY_0', 'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6', 'BILL_AMT1', 'BILL_AMT2', 'BILL_AMT3', 'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1', 'PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5', 'PAY_AMT6', 'default_payment_next_month']\n",
-      "categorical columns:['ID', 'SEX', 'EDUCATION', 'MARRIAGE']\n"
+      "numerical columns:['LIMIT_BAL', 'EDUCATION', 'MARRIAGE', 'AGE', 'PAY_0', 'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6', 'BILL_AMT1', 'BILL_AMT2', 'BILL_AMT3', 'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1', 'PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5', 'PAY_AMT6', 'default_payment_next_month']\n",
+      "categorical columns:['ID', 'SEX']\n"
      ]
     }
    ],
@@ -620,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "id": "ae84b5da",
    "metadata": {},
    "outputs": [
@@ -630,7 +638,7 @@
        "array([2, 1, 3, 5, 4, 6, 0], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "5ed7f99f",
    "metadata": {},
    "outputs": [],
@@ -663,17 +671,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 112,
    "id": "e2940b80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 0], dtype=object)"
+       "array([1, 2, 3], dtype=int64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,13 +701,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 107,
    "id": "a697ea09",
    "metadata": {},
    "outputs": [],
    "source": [
     "others1=[0,3]\n",
     "data['MARRIAGE']=data['MARRIAGE'].replace(to_replace=others1,value=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "6fe4d2af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1        1\n",
+       "2        2\n",
+       "3        2\n",
+       "4        1\n",
+       "5        1\n",
+       "        ..\n",
+       "29996    1\n",
+       "29997    2\n",
+       "29998    2\n",
+       "29999    1\n",
+       "30000    1\n",
+       "Name: MARRIAGE, Length: 30000, dtype: object"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['MARRIAGE'].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "177b31ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['MARRIAGE'].dtypes"
    ]
   },
   {
